manifests/prototype/pihole/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.bauer.mt`)
      kind: Rule
      services:
        - name: pihole
          port: 80
      # middlewares:
      #   - name: default-headers
      # leave undefined to use the default headers in default namespace
  # tls:
  #   secretName: jimsgarage-tls # change to your cert name
  # leave undefined to use the traefik default cert (wildcard is present)
